<resources>
    <string name="app_name">Smart Uni</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_acc">&#032;create account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">&#032;login</string>
    <string name="searc_hint">search.........</string>
    <string name="oct_desc">October 6 University is committed to provide graduates with the necessary efficiency and skills that cater for the requirements of job market .</string>
    <string name="details">Details</string>
    <string name="contact">Contact us</string>
    <string name="phone_num">0123456789</string>
    <string name="mail">contact@university.com</string>
    <string name="title_activity_nav">NavActivity</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lorem">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. </string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="website_colon">Website:</string>
    <string name="mail_colon">Email:</string>
    <string name="phone_colon">Phone:</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="attach_app">attach application</string>
    <string name="about">About us</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="home">Homepage</string>
    <string name="applications">Applications</string>
    <string name="status">Status</string>
    <string name="status_colon">Status:</string>
    <string name="faculty_colon">Faculty:</string>
    <string name="cost_colon">Cost:</string>
    <string name="deposit_colon">Deposit:</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="profile_updated">Profile updated</string>
    <string name="retry">Retry</string>
    <string name="dialog_msg_loading">Loading</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="phone_error">Please enter a valid value</string>
    <string name="link_error">Please enter a valid value</string>
    <string name="email_error">Please enter a valid value</string>
    <string name="empty_error">This field cannot be empty</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="select_doc">Please upload your documents</string>
    <string name="account_created">Account created</string>
    <string name="grade">grade</string>
    <string name="grade_error">Enter valid grade</string>
    <string name="sign_out">Logout</string>
    <string name="from">From</string>
    <string name="no_data">No data</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_username">wrong username</string>
</resources>
