<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_priority_high_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_applications"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/applications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/sign_out" />
    </group>


</menu>
