<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/grey_900"
    android:gravity="center">

    <include layout="@layout/no_internet"/>

    <include layout="@layout/loading"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_person_white_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_person_white_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#fff" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_layout"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone"
                android:hint="@string/phone"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_person_white_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#fff"
                />


        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:hint="@string/password"
            android:layout_marginTop="12dp"
            android:textColorHint="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout"
            >
            <EditText
                android:id="@+id/password"
                android:textAlignment="viewStart"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock_white_18dp"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:hint="@string/confirm_password"
            android:layout_marginTop="12dp"
            android:textColorHint="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_layout"
            >
            <EditText
                android:id="@+id/confirm_password"
                android:textAlignment="viewStart"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock_white_18dp"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/application_container"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:orientation="vertical"
            android:id="@+id/attach">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="@color/white"
                android:layout_marginBottom="6dp"
                android:id="@+id/attach_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_app"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:id="@+id/attach_text"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:theme="@style/accent_button"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>





</LinearLayout>