<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey_100">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/website_colon"
                            android:textColor="@color/grey_900"
                            android:textSize="14sp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="www.google.com"
                            android:layout_weight="3" />

                    </LinearLayout>

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="1dp"
                       android:background="@color/grey_300"
                       android:layout_marginTop="16dp"
                       android:layout_marginBottom="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/mail_colon"
                            android:textColor="@color/grey_900"
                            android:textSize="14sp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:text="contact@google.com"/>

                    </LinearLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_300"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_colon"
                            android:textColor="@color/grey_900"
                            android:textSize="14sp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="+0123456789"
                            android:layout_weight="3"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>